deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
spec:
  replicas: 3  # El número de réplicas (pods) para esta versión
  selector:
    matchLabels:
      app: myapp
      version: v1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      containers:
      - name: myapp-v1-container
        image: jorgenico08/myapp:v1  # La imagen Docker que construiste para la versión 1
        ports:
        - containerPort: 80
