deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
spec:
  replicas: 1  # En un despliegue Canary, usualmente arrancamos con 1 réplica
  selector:
    matchLabels:
      app: myapp
      version: v2
  template:
    metadata:
      labels:
        app: myapp
        version: v2
    spec:
      containers:
      - name: myapp-v2-container
        image: jorgenico08/myapp:v2  # La imagen Docker que construiste para la versión 2
        ports:
        - containerPort: 80
