service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80  # El puerto donde el servicio estará escuchando
    targetPort: 80  # El puerto del contenedor donde se sirve la aplicación
    name: http
